--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "angular": "^1.6.2",
     "angular-ui-bootstrap": "^2.5.0",
+    "body-parser": "^1.17.1",
     "express": "^4.14.1",
+    "mongoose": "^4.8.6",
     "ng-bootstrap": "^1.1.16-1"
   }
 }
